feat: add exerciseProgress & enrollForCourse controllers
Implemented enrollment for a course and tracking progress of a course.
Added OpenAPI spec for these controllers. Also, renamed prisma models
from snaked case to camel case.
