# server/src/routes/courses.routes.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
-import {getAllCourses, createCourse} from "../controllers/courses.controller";
+import {getAllCourses, createCourse, enrollForCourse} from "../controllers/courses.controller";
 
 const router = Router();
 
-router.get('/', getAllCourses)
-router.post('/', createCourse)
+router.get('/', getAllCourses);
+router.post('/', createCourse);
+router.post('/enrollments', enrollForCourse);
 
 export default router;
